# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  06 Jan 2005; Marius Mauch <genone@gentoo.org> bin/emerge:
  Fixing some calls to pkgsplit to not modify the returned tuple.

  29 Dec 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: Sort the unmerge
  to make the --pretend output easier to review when there is a large list.
  Fixed depclean's attempt at modifying a tuple returned from pkgsplit.

  28 Dec 2004; Brian Harring <ferringb@gentoo.org> man/Makefile.am:
  Removed eclass man pages from makefile references.

  15 Dec 2004; Marius Mauch <genone@gentoo.org>
  bin/ebuild-default-functions.sh:
  Disabling the warning for GID=portage as it affects most/all packages and
  gets really annoying.

  14 Dec 2004; Jason Stubbs <jstubbs@gentoo.org> bin/emerge pym/portage.py:
  Fixed emerge so that the "emerge by path" message is only shown when the
  "path" ends in .ebuild or .tbz2. Fixed the package.keywords bug that caused
  all packages to become unmasked.

  11 Dec 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage_syntax.py:
  Modified atom.match() to reflect the change of cpv becoming an attribute of
  atom.

  10 Dec 2004; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py: Fixed a bug
  due to the cleanup patch where zfill() was being called on an integer.

  09 Dec 2004; Marius Mauch <genone@gentoo.org> bin/ebuild-functions.sh:
  Fixing stupid typo that broke einstall for CONF_LIBDIR archs.

  09 Dec 2004; Marius Mauch <genone@gentoo.org>
  bin/ebuild-default-functions.sh:
  Changing LDFLAGS to CFLAGS for the setXid check.

  08 Dec 2004; Marius Mauch <genone@gentoo.org> pym/portage.py: